--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@testing-library/user-event": "^12.1.10",
     "prop-types": "^15.7.2",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
