--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "express": "^4.16.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
     "@material-ui/core": "^4.11.1",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
@@ -24,10 +20,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-polyfill": "^6.26.0",
+    "clsx": "^1.1.1",
+    "express": "^4.16.3",
     "prop-types": "^15.7.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "react-router-dom": "^5.2.0"
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
