--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@date-io/date-fns": "v1",
     "@material-ui/core": "^4.11.1",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "express": "^4.16.3",
     "lodash.throttle": "^4.1.1",
     "material-ui-dropzone": "^3.5.0",
