--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "lodash.throttle": "^4.1.1",
     "material-ui-dropzone": "^3.5.0",
+    "mui-datatables": "^3.7.3",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
