--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "simple-react-full-stack",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.16.1"
+  },  
   "description": "Boilerplate to build a full stack web application using React, Node.js, Express and Webpack.",
   "main": "src/server/index.js",
   "scripts": {
