--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
+    "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^2.0.0",
     "eslint": "^5.0.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -58,14 +60,13 @@
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.12.0",
+    "less-loader": "^7.0.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3",
-    "copy-webpack-plugin": "^6.3.0",
-    "less": "^3.12.0",
-    "less-loader": "^7.0.0"
+    "webpack-dev-server": "^3.1.3"
   }
 }
